Uses svh instead of dvh to stop the jumping effect

--- a/components/search/header_client.module.css
+++ b/components/search/header_client.module.css
@@ -6,7 +6,7 @@
   justify-content: space-between;
   align-items: center;
   width: 97dvw;
-  height: 8dvh;
+  height: 8svh;
   background-color: #cafafe;
   margin-left: auto;
   margin-right: auto;
@@ -42,7 +42,7 @@
 
 .hamburger_options{
   z-index: 20;
-  top: 10dvh;
+  top: 10svh;
   left:50%;
   transform: translateX(100%);
   width: 90vw;
